--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
   <video controls>
     <source src="video/cab4fca4c88b7584a064e764296d92d1_1756649957154.mp4" type="video/mp4">
   </video>
+    <br>
+    <video controls>
+    <source src="video/5abb26f55f8d9f3783d2ef518c5150a7_1753712300970.mp4" type="video/mp4">
+  </video>
+  <br>
+  <br>
+    <video controls>
+    <source src="video/de29a1b965ae9a7f759d851b058c73e4_1755697255012.mp4" type="video/mp4">
+  </video>
 </section>
 
 <div id="notify">✨ تحديث جديد متاح! اضغط هنا</div>
@@ -67,3 +76,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
