--- a/wep game/Challenges game/index.html
+++ b/wep game/Challenges game/index.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🔥 لعبة التحديات 🔥</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Fun X – من سيربح المليون</title>
+<link rel="stylesheet" href="millionaire.css">
 </head>
 <body>
-  <h1>🔥 لعبة التحديات 🔥</h1>
-  <div class="card" id="challenge">اضغط على الزر لتبدأ التحدي!</div>
-  <button class="btn" id="challengeBtn">🎲 اعرض تحدي</button>
 
-  <script src="script.js"></script>
+    <!-- واجهة نهاية اللعبة -->
+<div id="gameOverUI" class="game-over-ui">
+    <h2>🎉 لقد انتهت اللعبة! 🎉</h2>
+    <p id="finalScore">نقاطك النهائية: 0</p>
+    <button id="restartBtn">إعادة اللعب</button>
+</div>
+
+<div class="stars"></div>
+<header>
+<h1>Fun X – من سيربح المليون</h1>
+<button id="toggleTheme">🌙 وضع الليل</button>
+</header>
+
+<div class="question-container">
+    <div id="score">النقاط: 0</div>
+    <div id="timer">الوقت: 10</div>
+    <div id="question" class="question"></div>
+    <div class="answers">
+        <button onclick="checkAnswer(0)">الإجابة 1</button>
+        <button onclick="checkAnswer(1)">الإجابة 2</button>
+        <button onclick="checkAnswer(2)">الإجابة 3</button>
+        <button onclick="checkAnswer(3)">الإجابة 4</button>
+    </div>
+</div>
+
+<div id="notify"></div>
+
+<audio id="bgMusic" src="sounds/Awkward_Apocalyptic_Pickup.mp3" loop autoplay></audio>
+<audio id="clickSound" src="Music/mixkit-modern-technology-select-3124.wav"></audio>
+<audio id="correctSound" src="Music/mixkit-winning-a-coin-video-game-2069.wav"></audio>
+<audio id="wrongSound" src="Music/mixkit-player-losing-or-failing-2042.wav"></audio>
+<audio id="gameOverSound" src="Music/mixkit-wrong-answer-fail-notification-946.wav"></audio>
+
+<script src="millionaire.js"></script>
 </body>
 </html>
