--- a/wep game/Who will win the million/index.html
+++ b/wep game/Who will win the million/index.html
@@ -8,13 +8,22 @@
 </head>
 <body>
 
+    <!-- واجهة نهاية اللعبة -->
+<div id="gameOverUI" class="game-over-ui">
+    <h2>🎉 لقد انتهت اللعبة! 🎉</h2>
+    <p id="finalScore">نقاطك النهائية: 0</p>
+    <button id="restartBtn">إعادة اللعب</button>
+</div>
+
 <div class="stars"></div>
 <header>
 <h1>Fun X – من سيربح المليون</h1>
+<button id="toggleTheme">🌙 وضع الليل</button>
 </header>
 
 <div class="question-container">
     <div id="score">النقاط: 0</div>
+    <div id="timer">الوقت: 10</div>
     <div id="question" class="question"></div>
     <div class="answers">
         <button onclick="checkAnswer(0)">الإجابة 1</button>
@@ -27,7 +36,10 @@
 <div id="notify"></div>
 
 <audio id="bgMusic" src="sounds/Awkward_Apocalyptic_Pickup.mp3" loop autoplay></audio>
-<audio id="clickSound" src="sounds/mixkit-select-click-1109.wav"></audio>
+<audio id="clickSound" src="Music/mixkit-modern-technology-select-3124.wav"></audio>
+<audio id="correctSound" src="Music/mixkit-winning-a-coin-video-game-2069.wav"></audio>
+<audio id="wrongSound" src="Music/mixkit-player-losing-or-failing-2042.wav"></audio>
+<audio id="gameOverSound" src="Music/mixkit-wrong-answer-fail-notification-946.wav"></audio>
 
 <script src="millionaire.js"></script>
 </body>
