--- a/tool/Fun X/index.html
+++ b/tool/Fun X/index.html
@@ -1,45 +1,86 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>عن Fun X والمؤسس</title>
+<title>Fun X | Profile</title>
+
 <link rel="stylesheet" href="about.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body>
-    <div class="container">
-        <h1>عن Fun X والمؤسس</h1>
 
-        <div class="profile">
-            <img src="images/Snapchat-440918874.jpg" alt="صورة المؤسس">
+<div class="github-profile">
 
-            <div class="info">
-                <p><strong>الاسم الكامل:</strong> خالد مرزوق عبد النبي</p>
-                <p><strong>اللقب:</strong> التركي</p>
-                <p><strong>تاريخ الميلاد:</strong> 02/01/2009</p>
-                <p><strong>البريد الإلكتروني:</strong> <a href="mailto:kbdalnby180@gamil.com">kbdalnby180@gamil.com</a></p>
-                <p><strong>رقم التواصل:</strong> 01158380837</p>
-            </div>
-        </div>
+  <!-- Sidebar -->
+  <aside class="sidebar">
+    <img src="images/IMG_20250717_203021_193.jpg" alt="Founder">
+    <h2>خالد التركي</h2>
+    <span class="username">@funx-dev</span>
 
-        <div class="about">
-            <h2>عن الموقع</h2>
-            <p>
-                موقع <strong>Fun X</strong> هو موقع ترفيهي شامل يهدف لتقديم تجربة ممتعة لجميع الزوار. يجمع بين:
-            </p>
-            <ul>
-                <li>🎮الألعاب التفاعلية والمسلية.</li>
-                <li>مشاهدة الفيديوهات🎬  </li>
-                <li>مقاطع القرآن الصوتية لتجربة روحانية🕌 .</li>
-                <li>تطبيقات حياتيه📝</li>
-            </ul>
-            <p>
-                الموقع يتميز بسهولة التصفح وتصميم جذاب وبسيط متوافق مع جميع الأجهزة، مع توفير محتوى متنوع يجمع بين الترفيه والفائدة. 
-                مؤسسه، <strong>خالد مرزوق عبد النبي "التركي"</strong>، يسعى دائماً لتقديم تجربة ممتعة ومميزة للمستخدمين من جميع الأعمار.
-            </p>
-        </div>
+    <p class="bio">
+      مؤسس موقع Fun X | مطور ويب  
+      مهتم بالألعاب والتجارب التفاعلية
+    </p>
+
+    <div class="info">
+      <p><i class="fa-solid fa-location-dot"></i> Egypt</p>
+      <p><i class="fa-solid fa-cake-candles"></i> 02 / 01 / 2009</p>
+      <p><i class="fa-solid fa-envelope"></i> kbdalnby180@gamil.com</p>
     </div>
+
+    <button class="follow-btn">متابعة</button>
+  </aside>
+
+  <!-- Main Content -->
+  <main class="content">
+
+    <!-- Stats -->
+    <section class="stats">
+      <div><strong>9+</strong><span>ألعاب</span></div>
+      <div><strong>2+</strong><span>أقسام</span></div>
+      <div><strong>3+</strong><span>فيديو</span></div>
+    </section>
+
+    <!-- About -->
+    <section class="about">
+      <h3>عن Fun X</h3>
+      <p>
+        Fun X هو موقع ترفيهي متكامل يجمع بين الألعاب، الفيديوهات،
+        الموسيقى والمحتوى التعليمي في تجربة واحدة سهلة وبسيطة.
+      </p>
+    </section>
+
+    <!-- Timeline -->
+    <section class="timeline">
+      <h3>📅 Timeline تطور Fun X</h3>
+
+      <div class="event">
+        <span class="date">2023</span>
+        <p>💡 بداية فكرة Fun X كموقع ترفيهي</p>
+      </div>
+
+      <div class="event">
+        <span class="date">2024</span>
+        <p>🎮 إضافة أول مجموعة ألعاب تفاعلية</p>
+      </div>
+
+      <div class="event">
+        <span class="date">2025</span>
+        <p>📺 إطلاق صفحات الفيديو والبث المباشر</p>
+      </div>
+
+      <div class="event">
+        <span class="date">المستقبل</span>
+        <p>🚀 نظام حسابات + شات + مزايا مدفوعة</p>
+      </div>
+
+    </section>
+
+  </main>
+
+</div>
+
 </body>
 </html>
-
-
