--- a/wep app/qr/index.html
+++ b/wep app/qr/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مولد روابط QR Code</title>
-    <link rel="stylesheet" href="qr.css">
-    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>مولد روابط QR Code</title>
+<link rel="stylesheet" href="qr.css">
+<script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>مولد روابط QR Code</h1>
-        <input type="text" id="urlInput" value="http://localhost:3000/" placeholder="ادخل الرابط">
-        <button id="generateBtn">إنشاء QR Code</button>
+        <div class="input-group">
+            <input type="text" id="urlInput" value="http://localhost:3000/" placeholder="ادخل الرابط">
+            <button id="generateBtn">إنشاء QR Code</button>
+        </div>
         <div id="qrcode"></div>
+        <p id="qrText">يمكنك مسح هذا الكود للوصول إلى الرابط</p>
     </div>
-    <script src="qr.js"></script>
+<script src="qr.js"></script>
 </body>
 </html>
