--- a/index.html
+++ b/index.html
@@ -2,82 +2,82 @@
 <html lang="ar">
 
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Fun X</title>
-<link rel="stylesheet" href="style.css">
-<link rel="icon" type="image/png" href="images/file_0000000059a062309109771ec07a4d2a-01.jpeg">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fun X</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="images/file_0000000059a062309109771ec07a4d2a-01.jpeg">
 
-<!-- OG Tags -->
-<meta property="og:type" content="website">
-<meta property="og:title" content="Fun X">
-<meta property="og:description" content="أفضل موقع ترفيهي Fun X 🔥">
-<meta property="og:image" content="https://kbdalnby180-commits.github.io/wep_fun/images/file_0000000059a062309109771ec07a4d2a-01.jpeg">
-<meta property="og:image:type" content="image/png">
-<meta property="og:image:width" content="600">
-<meta property="og:image:height" content="600">
-<meta property="og:url" content="https://kbdalnby180-commits.github.io/wep_fun/">
+    <!-- OG Tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Fun X">
+    <meta property="og:description" content="أفضل موقع ترفيهي Fun X 🔥">
+    <meta property="og:image"
+        content="https://kbdalnby180-commits.github.io/wep_fun/images/file_0000000059a062309109771ec07a4d2a-01.jpeg">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="600">
+    <meta property="og:image:height" content="600">
+    <meta property="og:url" content="https://kbdalnby180-commits.github.io/wep_fun/">
 </head>
 
 <body>
-<!-- خلفية النجوم والقمر والسحب -->
-<div class="stars"></div>
-<div class="celestial" id="celestial"></div>
-<div class="cloud"></div>
-<div class="cloud"></div>
+    <!-- خلفية النجوم والقمر والسحب -->
+    <div class="stars"></div>
+    <div class="celestial" id="celestial"></div>
+    <div class="cloud"></div>
+    <div class="cloud"></div>
 
-<!-- الهيدر -->
-<header>
-<div id="siteLogoName">
-<img src="images/file_0000000059a062309109771ec07a4d2a-01.jpeg" alt="شعار الموقع" id="siteLogo">
-<span id="siteName">Fun X</span>
-</div>
-<div id="timeCalendarWrapper">
-<div id="timeCalendar">
-<div id="clock"></div>
-<div id="calendar"></div>
-</div>
-</div>
-</header>
+    <!-- الهيدر -->
+    <header>
+        <div id="siteLogoName">
+            <img src="images/file_0000000059a062309109771ec07a4d2a-01.jpeg" alt="شعار الموقع" id="siteLogo">
+            <span id="siteName">Fun X</span>
+        </div>
+        <div id="timeCalendarWrapper">
+            <div id="timeCalendar">
+                <div id="clock"></div>
+                <div id="calendar"></div>
+            </div>
+        </div>
+    </header>
 
-<!-- البحث -->
-<form id="searchBox" action="https://www.google.com/search" method="GET" target="_blank">
-<input type="text" name="q" placeholder="ابحث في جوجل">
-<button type="submit">🔍</button>
-</form>
+    <!-- البحث -->
+    <form id="searchBox" action="https://www.google.com/search" method="GET" target="_blank">
+        <input type="text" name="q" placeholder="ابحث في جوجل">
+        <button type="submit">🔍</button>
+    </form>
 
-<!-- الفيديوهات -->
-<section>
-<h2>📺 فيديو اليوم</h2>
-<video controls>
-<source src="video/cab4fca4c88b7584a064e764296d92d1_1756649957154.mp4" type="video/mp4">
-</video>
-<video controls>
-<source src="video/5abb26f55f8d9f3783d2ef518c5150a7_1753712300970.mp4" type="video/mp4">
-</video>
-<video controls>
-<source src="video/de29a1b965ae9a7f759d851b058c73e4_1755697255012.mp4" type="video/mp4">
-</video>
-</section>
+    <!-- الفيديوهات -->
+    <section>
+        <h2>📺 فيديو اليوم</h2>
+        <video controls>
+            <source src="video/cab4fca4c88b7584a064e764296d92d1_1756649957154.mp4" type="video/mp4">
+        </video>
+        <video controls>
+            <source src="video/5abb26f55f8d9f3783d2ef518c5150a7_1753712300970.mp4" type="video/mp4">
+        </video>
+        <video controls>
+            <source src="video/de29a1b965ae9a7f759d851b058c73e4_1755697255012.mp4" type="video/mp4">
+        </video>
+    </section>
 
 
 
-<!-- روبوت الدردشة -->
-<button id="chatToggle">📂</button>
-<div id="chatbot" class="hidden">
-<div id="chatMessages"></div>
-<div id="chatInputWrapper">
-<input type="text" id="chatInput" placeholder="اكتب رسالتك...">
-<button id="sendBtn">➡️</button>
-</div>
-</div>
+    <!-- روبوت الدردشة -->
+    <button id="chatToggle">📂</button>
+    <div id="chatbot" class="hidden">
+        <div id="chatMessages"></div>
+        <div id="chatInputWrapper">
+            <input type="text" id="chatInput" placeholder="اكتب اسم الصفحه التي تريدها ...">
+            <button id="sendBtn">➡️</button>
+        </div>
+    </div>
 
-<!-- الفوتر -->
-<footer>📝 جميع الحقوق محفوظة © 2025 Fun X 🎉</footer>
+    <!-- الفوتر -->
+    <footer>📝 جميع الحقوق محفوظة © 2025 Fun X 🎉</footer>
 
-<!-- JS -->
-<script src="script.js"></script>
+    <!-- JS -->
+    <script src="script.js"></script>
 </body>
 
 </html>
-
