--- a/wep game/crash/CRASH.html
+++ b/wep game/crash/CRASH.html
@@ -1,221 +1,46 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>لعبة الطيارة – إصدار 1.1</title>
-<style>
-body {
-  background: #111;
-  color: #fff;
-  font-family: "Cairo", Arial, sans-serif;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-}
-h2 { margin:20px 0; font-size:28px; color:#0ff; text-shadow:0 0 10px #0ff,0 0 25px #0ff;}
-.play-container {
-  position: relative;
-  width: 90%;
-  margin: 20px auto;
-  padding: 15px;
-  border-radius: 12px;
-  background: linear-gradient(145deg,#111,#222);
-  box-shadow: 0 0 20px #0ff inset;
-}
-#playArea { position: relative; height: 250px; background: #000; border-radius: 12px; overflow: hidden; box-shadow: 0 0 20px #0ff inset; }
-#plane { position: absolute; top: 50%; transform: translateY(-50%); width: 200px; transition: transform 0.05s; z-index:2; filter: drop-shadow(0 0 15px #0ff); }
-#line { position: absolute; top: 54%; height: 6px; background: linear-gradient(90deg,#0ff,#0ff,#0ff); transform: translateY(-50%); right: 0; z-index:1; }
-#explosion { position: absolute; display: none; width: 220px; height: 200px; top:50%; transform: translateY(-50%); z-index:3; }
-.controls { margin: 10px 0; }
-input { padding: 6px 10px; border-radius: 8px; border: 1px solid #555; width: 130px; }
-button { padding: 6px 14px; margin: 4px; border: none; border-radius: 8px; cursor: pointer; background: #0a0a2e; color: #fff; font-weight:bold; transition:0.3s; }
-button:hover { background:#05052a; color:#0ff; }
-#transactionsList { margin-top: 10px; text-align: right; max-height: 200px; overflow-y: auto; font-size: 14px; background: rgba(255,255,255,0.05); border-radius:8px; padding:6px; }
-#playersArea { display: flex; flex-wrap: wrap; gap: 6px; margin-top: 8px; justify-content: center; }
-.player-card { background: linear-gradient(145deg,#111,#222); padding: 6px 10px; border-radius: 8px; min-width: 90px; text-align:center; color:#0ff; box-shadow:0 0 10px #0ff; font-weight:bold; }
-.player-id { color:#0af; }
-.player-bet { color:#ffd700; }
-.player-status { margin-top:2px; color:#0f0; }
-#multiplier { font-size:24px; margin:10px 0; color:#0ff; text-shadow:0 0 10px #0ff; }
-#result { font-size:22px; margin:10px 0; color:#0ff; text-shadow:0 0 10px #0ff;}
-#balance { font-size:20px; margin:10px 0; color:#ffd700; text-shadow:0 0 10px #ffd700;}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>لعبة الطيارة – إصدار 1.1</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<h2>🎮 PlaneX 🎮</h2>
+  <h2>🎮 PlaneX 🎮</h2>
 
-<div class="play-container">
-  <div id="playArea">
-    <img id="plane" src="images/klipartz.com.png" alt="plane" />
-    <div id="line"></div>
-    <img id="explosion" src="images/64f06d3a3dd1b.png" alt="explosion" />
+  <div class="play-container">
+    <div id="playArea">
+      <img id="plane" src="images/klipartz.com.png" alt="plane" />
+      <div id="line"></div>
+      <img id="explosion" src="images/64f06d3a3dd1b.png" alt="explosion" />
+    </div>
+
+    <div id="multiplier">x1.00</div>
+    <div id="result"></div>
+    <div id="balance"></div>
+
+    <div class="controls">
+      <input id="bet1" type="number" placeholder="رهانك" value="10" />
+      <button id="bet1Start">ابدأ</button>
+      <button id="bet1Cash">سحب</button>
+    </div>
+
+    <div class="controls">
+      <button id="depositPage">💰 الإيداع</button>
+    </div>
+
+    <h3>👥 اللاعبين</h3>
+    <div id="playersArea"></div>
+
+    <h3>📜 سجل المعاملات</h3>
+    <div id="transactionsList">لا توجد معاملات بعد</div>
   </div>
 
-  <div id="multiplier">x1.00</div>
-  <div id="result"></div>
-  <div id="balance"></div>
-
-  <div class="controls">
-    <input id="bet1" type="number" placeholder="رهانك" value="10" />
-    <button id="bet1Start">ابدأ</button>
-    <button id="bet1Cash">سحب</button>
-  </div>
-
-  <div class="controls">
-    <button id="depositPage">💰 الإيداع</button>
-  </div>
-
-  <h3>👥 اللاعبين</h3>
-  <div id="playersArea"></div>
-
-  <h3>📜 سجل المعاملات</h3>
-  <div id="transactionsList">لا توجد معاملات بعد</div>
-</div>
-
-<script>
-// الأصوات
-const soundTakeoff = new Audio("sounds/take-off-36682.mp3"),
-      soundExplosion = new Audio("sounds/explosion-312361.mp3"),
-      soundClick = new Audio("sounds/ui-button-click-5-327756.mp3");
-
-const MIN_BET = 10, INITIAL_BALANCE = 50.0, TICK_MS = 50, STEP = 0.02;
-let balance = parseFloat(localStorage.getItem("balance") || INITIAL_BALANCE);
-let multiplier = 1.0, crashPoint = 0, running = false, timer = null;
-let userBets = [0], userCashed=[false], transactions=[], aiPlayers=[];
-const elBalance = document.getElementById("balance"),
-      elMultiplier = document.getElementById("multiplier"),
-      elResult = document.getElementById("result"),
-      plane = document.getElementById("plane"),
-      line = document.getElementById("line"),
-      explosion = document.getElementById("explosion"),
-      elTransactionsList = document.getElementById("transactionsList"),
-      playArea = document.getElementById("playArea"),
-      playersArea = document.getElementById("playersArea");
-
-function playClick(){ soundClick.currentTime=0; soundClick.play(); }
-function saveState(){ localStorage.setItem("balance", balance.toFixed(2)); }
-function updateBalance(){ elBalance.innerText = "رصيدك: " + balance.toFixed(2) + " جنيه"; saveState(); }
-function pushTransaction(obj){ transactions.unshift(obj); renderTransactions(); }
-function renderTransactions(){
-  if(transactions.length===0){ elTransactionsList.innerText='لا توجد معاملات بعد'; return; }
-  elTransactionsList.innerHTML = transactions.map(t=>{
-    if(t.type==='cashout'){ return `<div>✅ <b>${t.player}</b> سحب عند <b>x${t.at}</b> — رهان: <b>${t.bet} ج</b> — كسب: <b>${t.won} ج</b></div>` }
-    else if(t.type==='loss'){ return `<div>❌ <b>${t.player}</b> خسر — رهان: <b>${t.bet} ج</b></div>` }
-    else if(t.type==='deposit'){ return `<div>💰 <b>${t.player||'محفظتك'}</b> دفع/إيداع: <b>+${t.amount} ج</b></div>` }
-  }).join('');
-}
-
-function getCrashPoint(){ let r=Math.random(); if(r<0.55) return parseFloat((1+Math.random()*5).toFixed(2));
-else if(r<0.75) return parseFloat((6+Math.random()*4).toFixed(2));
-else if(r<0.9) return parseFloat((10+Math.random()*6).toFixed(2));
-else return parseFloat((16+Math.random()*4).toFixed(2)); }
-
-function generatePlayers(){
-  playersArea.innerHTML=""; aiPlayers=[];
-  let n = 10+Math.floor(Math.random()*15);
-  for(let i=0;i<n;i++){
-    const pid = maskId("X"); 
-    const bet = 10+Math.floor(Math.random()*90);
-    const cashAt = (Math.random()<0.4)?(1.2+Math.random()*8).toFixed(2):null;
-    aiPlayers.push({id:pid,bet:bet,cashAt:cashAt,cashed:false});
-    const card=document.createElement("div"); card.className="player-card";
-    card.innerHTML=`<div class="player-id">${pid}</div><div class="player-bet">رهان: ${bet} ج</div><div class="player-status ok">✅ مستمر</div>`;
-    playersArea.appendChild(card);
-  }
-}
-
-function startBet(index){
-  if(running){ alert("جولة جارية!"); return; }
-  transactions=[]; renderTransactions();
-  const input=document.getElementById("bet1");
-  const val=parseFloat(input.value);
-  if(isNaN(val)||val<MIN_BET){ alert("ادخل رهان صحيح"); return; }
-  if(val>balance){ alert("رصيدك غير كافي"); return; }
-  playClick(); balance-=val; updateBalance();
-  userBets[index]=val; userCashed[index]=false; multiplier=1.0; elMultiplier.innerText="x1.00"; elResult.innerHTML="";
-  crashPoint=getCrashPoint(); generatePlayers(); running=true;
-  plane.style.right="0px"; line.style.width="0px"; explosion.style.display="none"; soundTakeoff.currentTime=0; soundTakeoff.play();
-
-  timer=setInterval(()=>{
-    multiplier=parseFloat((multiplier+STEP).toFixed(2));
-    elMultiplier.innerText=`x${multiplier.toFixed(2)}`;
-    const maxWidth = playArea.clientWidth-plane.clientWidth;
-    const pos=(multiplier/30)*maxWidth;
-    plane.style.right=pos+"px"; line.style.width=pos+"px";
-
-    aiPlayers.forEach((p,idx)=>{
-      if(p.cashAt && !p.cashed && multiplier>=p.cashAt && multiplier<crashPoint){
-        p.cashed=true;
-        const win=(p.bet*multiplier).toFixed(2);
-        pushTransaction({type:'cashout',player:p.id,bet:p.bet,at:multiplier.toFixed(2),won:win});
-        playersArea.children[idx].querySelector(".player-status").innerText="سحب";
-      }
-    });
-
-    if(multiplier>=crashPoint){
-      clearInterval(timer); running=false;
-      explosion.style.width=plane.clientWidth+"px"; explosion.style.height=plane.clientHeight+"px";
-      explosion.style.right=plane.style.right; explosion.style.top=plane.style.top; explosion.style.display="block"; soundExplosion.currentTime=0; soundExplosion.play();
-      userBets.forEach((b,i)=>{ if(b>0 && !userCashed[i]) pushTransaction({type:'loss',player:maskId('Player'+(i+1)),bet:b}); });
-      aiPlayers.forEach((p,idx)=>{ if(!p.cashed){ pushTransaction({type:'loss',player:p.id,bet:p.bet}); playersArea.children[idx].querySelector(".player-status").innerText="❌ خسر"; } });
-      elResult.innerHTML=`💥 الطيارة تحطمت عند x${crashPoint}`;
-    }
-  }, TICK_MS)
-}
-
-function cashout(i){ if(!running || userCashed[i]) return; playClick(); userCashed[i]=true;
-  const win=parseFloat((userBets[i]*multiplier).toFixed(2)); balance+=win; updateBalance();
-  pushTransaction({type:'cashout',player:maskId('Player'+(i+1)),bet:userBets[i],at:multiplier.toFixed(2),won:win.toFixed(2)});
-}
-
-function maskId(id){ return `211***${Math.floor(100+Math.random()*900)}`; }
-
-document.getElementById("bet1Start").onclick=()=>startBet(0);
-document.getElementById("bet1Cash").onclick=()=>cashout(0);
-
-// صفحة الإيداع مع صعوبة قصوى واسترجاع الرمز بعد حل الخطوات
-document.getElementById("depositPage").onclick=async ()=>{
-  playClick();
-  let savedCode = localStorage.getItem("depositCode");
-  let amt = prompt("⚠️ الخطوة 1: أدخل مبلغ الإيداع (20 - 60000):");
-  if(!amt) return; amt=parseFloat(amt);
-  if(isNaN(amt)||amt<20||amt>60000){ alert("❌ المبلغ غير صالح!"); return; }
-
-  if(!savedCode){
-    let code = prompt("🔐 الخطوة 2: اختر رمز أمان 4 أرقام (سيتم حفظه للأبد):");
-    if(!code || !/^\d{4}$/.test(code)){ alert("❌ الرمز غير صالح!"); return; }
-    localStorage.setItem("depositCode", code); savedCode=code; alert("✅ الرمز تم حفظه للأبد!");
-  }
-
-  let inputCode = prompt("🔑 الخطوة 3: أدخل رمز الأمان:");
-  if(inputCode !== savedCode){
-    alert("❌ الرمز غير صحيح! تابع الخطوات لحله...");
-    // خطوات صعبة طويلة لحل الرمز
-    const steps = [
-      "اجمع الأرقام: 12 + 34",
-      "اطرح 15 من النتيجة",
-      "اقسم الناتج على 7",
-      "اضرب الناتج في 3",
-      "اطرح 5"
-    ];
-    let result = 0;
-    for(let i=0;i<steps.length;i++){
-      let ans = prompt(`🔧 خطوة ${i+1}: ${steps[i]}`);
-      if(ans===null){ alert("❌ تم إلغاء العملية"); return; }
-      result = parseFloat(ans);
-      if(isNaN(result)){ alert("❌ إدخال غير صالح"); i--; continue; }
-    }
-    alert(`✅ أحسنت! الرمز هو: ${savedCode}`);
-    return;
-  }
-
-  balance+=amt; updateBalance(); pushTransaction({type:'deposit',amount:amt}); alert("تم الإيداع بنجاح!");
-}
-
-updateBalance(); renderTransactions();
-</script>
-
+  <script src="script.js"></script>
 </body>
+
 </html>
