--- a/wep app/daily-tip/index.html
+++ b/wep app/daily-tip/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+
 <h1>💡 نصيحة يومية</h1>
 
 <div class="controls">
@@ -17,11 +18,11 @@
     <option value="female">أنثى</option>
   </select>
   <button onclick="showTip()">عرض النصيحة</button>
-  <button onclick="randomTip()">💫 نصيحة عشوائية</button>
+
+  <button id="toggleTheme">🌙 تبديل الوضع</button>
 </div>
 
 <div class="tip-card" id="tipBox">سيتم عرض نصيحتك هنا...</div>
-
 <script src="script.js"></script>
 </body>
 </html>
