--- a/tool/Fun X/index.html
+++ b/tool/Fun X/index.html
@@ -15,7 +15,7 @@
 
   <!-- Sidebar -->
   <aside class="sidebar">
-    <img src="images/IMG_20250717_203021_193.jpg" alt="Founder">
+    <img src="images/Snapchat-1550406533.jpg" alt="Founder">
     <h2>خالد التركي</h2>
     <span class="username">@funx-dev</span>
 
@@ -81,6 +81,7 @@
   </main>
 
 </div>
+<script src="script.js"></script>
 
 </body>
 </html>
