--- a/index.html
+++ b/index.html
@@ -76,8 +76,16 @@
     <!-- الفوتر -->
     <footer>📝 جميع الحقوق محفوظة © 2025 Fun X 🎉</footer>
 
+    <!-- الفوتر -->
+    <footer>📝 جميع الحقوق محفوظة © 2025 Fun X 🎉</footer>
+<script>
+if (sessionStorage.getItem("authorized") !== "true") {
+    window.location.href = "tool/splash.html";
+}
+</script>
     <!-- JS -->
     <script src="script.js"></script>
 </body>
+
 
 </html>
